--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -88,8 +88,8 @@ header.masthead h1 {
 }
 
 .testimonials {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .testimonials .testimonial-item {
@@ -99,6 +99,15 @@ header.masthead h1 {
 .testimonials .testimonial-item img {
   max-width: 12rem;
   box-shadow: 0px 5px 5px 0px #adb5bd;
+}
+
+.abouts {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.abouts .about-item {
+  max-width: 18rem;
 }
 
 .call-to-action {
